2016-07-27  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Functions/Misc/add-zle-hook-widget: Prefix function's
	name to its error messages.

	* unposted (after 38939): Completion/Unix/Command/_git:
	_git-rebase: Unbreak.

	* 38914 (tweaked): Completion/Unix/Command/_pkg-config: Add
	options, complete *.pc files for positional arguments.

2016-07-26  Peter Stephenson  <p.stephenson@samsung.com>

	* 38945: Doc/Zsh/expn.yo: additional notes on :a behaviour.

2016-07-24  Oliver Kiddle  <opk@zsh.org>

	* 38943: Completion/Unix/Command/_texinfo: update options
	and improve completion of Info files, nodes and menu items

	* 38939: Completion/Unix/Command/_git: add missing options,
	in particular those for GPG signing a push

	* 38936: Functions/Zle/vi-pipe: fix for option compatibility

	* 38929: Doc/Zsh/contrib.yo, Functions/Zle/select-word-match:
	new vim style text object using match-words-by-style mechanism

	* 38935: Matthew Martin: Completion/Unix/Command/_tcpdump:
	update for Free and Open BSD

2016-07-23  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Completion/Unix/Command/_git: _git-grep: Stop
	leaking the parameter $i.

	* unposted: Completion/Debian/Type/_deb_packages: Minor
	optimization.

	* 38913: Completion/Unix/Command/_pkg-config: Complete variables
	for --variable.

	* 38911: Doc/Zsh/compsys.yo: _arguments: Clarify documentation of
	'-s -w' switch

2016-07-23  Barton E. Schaefer  <schaefer@zsh.org>

	* 38923 (plus expanded comment): Src/jobs.c: zwaitjob() continues
	waiting for children that may have ignored the interrupt signal,
	even if the current shell has been interrupted.

2016-07-22  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* users/21779: Doc/Zsh/expn.yo: Clarify documentation of the
	':a' word modifier.

	* 38890: Completion/Zsh/Function/_add-zle-hook-widget,
	Completion/Zsh/Function/_add-zsh-hook: _add-zle-hook-widget:
	New completion.

2016-07-21  Oliver Kiddle  <opk@zsh.org>

	* 38904: Completion/Base/Core/_normal,