@@ -1,3 +1,9 @@
+2016-07-28  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* users/21793: README, Src/glob.c: remove ancient undocumented
+	pre-"f" glob qualifer feature that unqualified integers were
+	treated as octal file mode.
+
 2016-07-27  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* unposted: Functions/Misc/add-zle-hook-widget: Prefix function's
